--- a/css/style.css
+++ b/css/style.css
@@ -59,12 +59,13 @@ header img {
 header h1 {
   margin: 0 auto;
   padding: 0 auto;
-  font-weight: 900;
-  font-family: 'Lato', sans-serif;
-  text-transform: capitalize;
 }
 .small {
   margin-top: 1em;
+  font-weight: 900;
+  font-family: 'Lato', sans-serif;
+  text-transform: capitalize;
+  font-size: smaller;
 }
 /*-- Article Styles--*/
 article {
