--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ header {
   /*margin-top: 2em;
   margin-bottom: 2em;*/
   margin: 2em auto;
+  text-align: center;
 }
 header img {
   width: 100%;
@@ -64,8 +65,9 @@ header h1 {
   margin-top: 1em;
   font-weight: 900;
   font-family: 'Lato', sans-serif;
-  text-transform: capitalize;
-  font-size: smaller;
+  text-transform: uppercase;
+  font-size: medium;
+  color: gray
 }
 /*-- Article Styles--*/
 article {
@@ -83,6 +85,7 @@ article figcaption {
   font-size: 14px;
   font-weight: 300;
   font-family: 'Times New Roman', Times, serif;
+  color: gray;
 }
 .pagination {
   /*margin-top: 2em;
