--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ p {
   margin-bottom: .67em;
 }
 nav, footer {
-  background-color: #444;
+  background-color: darkred;
 }
 footer {
   text-align: center;
@@ -115,4 +115,10 @@ a.button:hover, a.button:active {
 @media screen and (max-width: 768px) {
   header {width: 96%;}
   article {width: 96%;}
+}
+
+span .dropcap {
+  float: left;
+  font-size: calc(var(--firstPgFontSize) * 3);
+  line-height: calc(var(--firstPgFontSize) * 2);
 }
